hphp/test/zend/good/Zend/tests/variadic/adding_additional_optional_parameter_error.php.expectf

Fatal error: Parameter $params is variadic and has a type constraint (string); variadic params with type constraints are not supported in non-Hack files in %s/adding_additional_optional_parameter_error.php on line 4
